Fixing a bug that would cause overlay elements to display outside of canvas area on Safari

--- a/client/style/styles.css
+++ b/client/style/styles.css
@@ -17,7 +17,7 @@ html {
 }
 body {
     font-family: Arial, sans-serif;
-    overflow: clip;
+    overflow: hidden;
 }
 canvas {
     display: block;
